--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.androidprojecttools.android.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <com.androidprojectcustomviews.SudokuSwipeGesturesView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:background="#ffffff"
+        app:circleUnSelectedColor="#0f0"
+        app:circleBorderWidth="1dp"
+        app:circleCenterRadius="10dp"
+        app:circleSelectedColor="#00f"/>
 
 </android.support.constraint.ConstraintLayout>
