初始化新框架，并在demo中使用了导入

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.androidprojecttools.android.MainActivity">
 
-    <com.androidprojectcustomviews.SudokuSwipeGesturesView
+    <com.lorenwang.customviews.android.SudokuSwipeGesturesView
         android:layout_width="375dp"
         android:layout_height="375dp"
         android:background="#ffffff"
