--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="com.androidprojecttools.android.MainActivity">
 
     <com.lorenwang.customviews.android.SudokuSwipeGesturesView
+        android:id="@+id/test"
         android:layout_width="375dp"
         android:layout_height="375dp"
         android:background="#ffffff"
@@ -20,5 +21,6 @@
         app:connectingLineColor="#4885fc"
         app:connectingLineErrorColor="#4885fc"
         app:circleShowType="CIRCLE_SHOW_TYPE_2"/>
+
 
 </android.support.constraint.ConstraintLayout>
