--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.androidprojecttools.android.MainActivity">
 
+
+    <!--九宫格手势控件-->
     <com.lorenwang.customviews.android.SudokuSwipeGesturesView
         android:id="@+id/test"
         android:layout_width="375dp"
@@ -20,9 +22,14 @@
         app:circleOuterRingErrorColor="#4c4885fc"
         app:connectingLineColor="#4885fc"
         app:connectingLineErrorColor="#4885fc"
-        app:circleShowType="CIRCLE_SHOW_TYPE_2"/>
+        app:circleShowType="CIRCLE_SHOW_TYPE_2"
+        android:visibility="gone"/>
 
+
+
+    <!--自定义图片控件-->
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -105,6 +112,16 @@
 
     </LinearLayout>
 
+
+    <!--画廊效果-->
+    <com.lorenwang.customviews.android.FancyCoverFlow.FancyCoverFlow
+        android:id="@+id/facyCoverFlow"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:maxRotation="45"
+        app:unselectedAlpha="0.3"
+        app:unselectedSaturation="0.0"
+        app:unselectedScale="0.4" />
 
 
 </android.support.constraint.ConstraintLayout>
