--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,12 @@
     <!--九宫格手势控件-->
     <com.lorenwang.customviews.android.SudokuSwipeGesturesView
         android:id="@+id/test"
-        android:layout_width="375dp"
-        android:layout_height="375dp"
+        android:layout_width="324dp"
+        android:layout_height="324dp"
         android:background="#ffffff"
         app:circleInnerRingRadius="11dp"
         app:circleEffectiveRadius="33dp"
+        app:circleOuterRingRadius="33dp"
         app:circleInnerRingUnSelectedColor="#dfdfdf"
         app:circleInnerRingSelectedColor="#4885fc"
         app:circleOuterRingSelectedColor="#4c4885fc"
@@ -23,7 +24,7 @@
         app:connectingLineColor="#4885fc"
         app:connectingLineErrorColor="#4885fc"
         app:circleShowType="CIRCLE_SHOW_TYPE_2"
-        android:visibility="gone"/>
+        />
 
 
 
@@ -121,7 +122,8 @@
         app:maxRotation="45"
         app:unselectedAlpha="0.3"
         app:unselectedSaturation="0.0"
-        app:unselectedScale="0.4" />
+        app:unselectedScale="0.4"
+        android:visibility="gone"/>
 
 
 </android.support.constraint.ConstraintLayout>
