--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,123 +7,123 @@
     tools:context="com.androidprojecttools.android.MainActivity">
 
 
-    <!--九宫格手势控件-->
-    <com.lorenwang.customviews.android.SudokuSwipeGesturesView
-        android:id="@+id/test"
-        android:layout_width="324dp"
-        android:layout_height="324dp"
-        android:background="#ffffff"
-        app:circleInnerRingRadius="11dp"
-        app:circleEffectiveRadius="33dp"
-        app:circleOuterRingRadius="33dp"
-        app:circleInnerRingUnSelectedColor="#dfdfdf"
-        app:circleInnerRingSelectedColor="#4885fc"
-        app:circleOuterRingSelectedColor="#4c4885fc"
-        app:circleInnerRingErrorColor="#4885fc"
-        app:circleOuterRingErrorColor="#4c4885fc"
-        app:connectingLineColor="#4885fc"
-        app:connectingLineErrorColor="#4885fc"
-        app:circleShowType="CIRCLE_SHOW_TYPE_2"
-        />
+    <!--&lt;!&ndash;九宫格手势控件&ndash;&gt;-->
+    <!--<com.lorenwang.customviews.android.SudokuSwipeGesturesView-->
+        <!--android:id="@+id/test"-->
+        <!--android:layout_width="324dp"-->
+        <!--android:layout_height="324dp"-->
+        <!--android:background="#ffffff"-->
+        <!--app:circleInnerRingRadius="11dp"-->
+        <!--app:circleEffectiveRadius="33dp"-->
+        <!--app:circleOuterRingRadius="33dp"-->
+        <!--app:circleInnerRingUnSelectedColor="#dfdfdf"-->
+        <!--app:circleInnerRingSelectedColor="#4885fc"-->
+        <!--app:circleOuterRingSelectedColor="#4c4885fc"-->
+        <!--app:circleInnerRingErrorColor="#4885fc"-->
+        <!--app:circleOuterRingErrorColor="#4c4885fc"-->
+        <!--app:connectingLineColor="#4885fc"-->
+        <!--app:connectingLineErrorColor="#4885fc"-->
+        <!--app:circleShowType="CIRCLE_SHOW_TYPE_2"-->
+        <!--/>-->
 
 
 
-    <!--自定义图片控件-->
-    <LinearLayout
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <com.lorenwang.customviews.android.CustomDrawableButton
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:background="#000"
-            android:text="DSFGJOISDJFLSKFSL"
-            android:textSize="30sp"
-            android:textColor="#fff"
-            app:drawablePosi="DRAWABLE_POSI_LEFT"
-            app:drawableTextDistance="10dp"
-            app:drawableWidth="20dp"
-            app:drawableHeight="20dp"
-            app:drawableResId="@mipmap/ic_launcher"
-            android:textAllCaps="true"
-            android:layout_marginBottom="5dp"
-            />
-        <com.lorenwang.customviews.android.CustomDrawableButton
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:background="#000"
-            android:text="dfasdfasdfasdf"
-            android:textSize="30sp"
-            android:textColor="#fff"
-            app:drawablePosi="DRAWABLE_POSI_TOP"
-            app:drawableTextDistance="10dp"
-            app:drawableWidth="20dp"
-            app:drawableHeight="20dp"
-            app:drawableResId="@mipmap/ic_launcher"
-            android:textAllCaps="true"
-            android:layout_marginBottom="5dp"
-            />
-        <com.lorenwang.customviews.android.CustomDrawableButton
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:background="#000"
-            android:text="dfasdfasdfasdf"
-            android:textSize="30sp"
-            android:textColor="#fff"
-            app:drawablePosi="DRAWABLE_POSI_RIGHT"
-            app:drawableTextDistance="10dp"
-            app:drawableWidth="20dp"
-            app:drawableHeight="20dp"
-            app:drawableResId="@mipmap/ic_launcher"
-            android:textAllCaps="true"
-            android:layout_marginBottom="5dp"
-            />
-        <com.lorenwang.customviews.android.CustomDrawableButton
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:background="#000"
-            android:text="dfasdfasdfasdf"
-            android:textSize="30sp"
-            android:textColor="#fff"
-            app:drawablePosi="DRAWABLE_POSI_BOTTOM"
-            app:drawableTextDistance="10dp"
-            app:drawableWidth="20dp"
-            app:drawableHeight="20dp"
-            app:drawableResId="@mipmap/ic_launcher"
-            android:textAllCaps="true"
-            android:layout_marginBottom="5dp"
-            />
-        <com.lorenwang.customviews.android.CustomDrawableButton
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:background="#000"
-            android:text="dfasdfasdfasdf"
-            android:textSize="30sp"
-            android:textColor="#fff"
-            app:drawablePosi="DRAWABLE_POSI_NONE"
-            app:drawableTextDistance="10dp"
-            app:drawableWidth="20dp"
-            app:drawableHeight="20dp"
-            app:drawableResId="@mipmap/ic_launcher"
-            android:textAllCaps="true"
-            />
+    <!--&lt;!&ndash;自定义图片控件&ndash;&gt;-->
+    <!--<LinearLayout-->
+        <!--android:visibility="gone"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="vertical">-->
+        <!--<com.lorenwang.customviews.android.CustomDrawableButton-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="90dp"-->
+            <!--android:background="#000"-->
+            <!--android:text="DSFGJOISDJFLSKFSL"-->
+            <!--android:textSize="30sp"-->
+            <!--android:textColor="#fff"-->
+            <!--app:drawablePosi="DRAWABLE_POSI_LEFT"-->
+            <!--app:drawableTextDistance="10dp"-->
+            <!--app:drawableWidth="20dp"-->
+            <!--app:drawableHeight="20dp"-->
+            <!--app:drawableResId="@mipmap/ic_launcher"-->
+            <!--android:textAllCaps="true"-->
+            <!--android:layout_marginBottom="5dp"-->
+            <!--/>-->
+        <!--<com.lorenwang.customviews.android.CustomDrawableButton-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="90dp"-->
+            <!--android:background="#000"-->
+            <!--android:text="dfasdfasdfasdf"-->
+            <!--android:textSize="30sp"-->
+            <!--android:textColor="#fff"-->
+            <!--app:drawablePosi="DRAWABLE_POSI_TOP"-->
+            <!--app:drawableTextDistance="10dp"-->
+            <!--app:drawableWidth="20dp"-->
+            <!--app:drawableHeight="20dp"-->
+            <!--app:drawableResId="@mipmap/ic_launcher"-->
+            <!--android:textAllCaps="true"-->
+            <!--android:layout_marginBottom="5dp"-->
+            <!--/>-->
+        <!--<com.lorenwang.customviews.android.CustomDrawableButton-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="90dp"-->
+            <!--android:background="#000"-->
+            <!--android:text="dfasdfasdfasdf"-->
+            <!--android:textSize="30sp"-->
+            <!--android:textColor="#fff"-->
+            <!--app:drawablePosi="DRAWABLE_POSI_RIGHT"-->
+            <!--app:drawableTextDistance="10dp"-->
+            <!--app:drawableWidth="20dp"-->
+            <!--app:drawableHeight="20dp"-->
+            <!--app:drawableResId="@mipmap/ic_launcher"-->
+            <!--android:textAllCaps="true"-->
+            <!--android:layout_marginBottom="5dp"-->
+            <!--/>-->
+        <!--<com.lorenwang.customviews.android.CustomDrawableButton-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="90dp"-->
+            <!--android:background="#000"-->
+            <!--android:text="dfasdfasdfasdf"-->
+            <!--android:textSize="30sp"-->
+            <!--android:textColor="#fff"-->
+            <!--app:drawablePosi="DRAWABLE_POSI_BOTTOM"-->
+            <!--app:drawableTextDistance="10dp"-->
+            <!--app:drawableWidth="20dp"-->
+            <!--app:drawableHeight="20dp"-->
+            <!--app:drawableResId="@mipmap/ic_launcher"-->
+            <!--android:textAllCaps="true"-->
+            <!--android:layout_marginBottom="5dp"-->
+            <!--/>-->
+        <!--<com.lorenwang.customviews.android.CustomDrawableButton-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="90dp"-->
+            <!--android:background="#000"-->
+            <!--android:text="dfasdfasdfasdf"-->
+            <!--android:textSize="30sp"-->
+            <!--android:textColor="#fff"-->
+            <!--app:drawablePosi="DRAWABLE_POSI_NONE"-->
+            <!--app:drawableTextDistance="10dp"-->
+            <!--app:drawableWidth="20dp"-->
+            <!--app:drawableHeight="20dp"-->
+            <!--app:drawableResId="@mipmap/ic_launcher"-->
+            <!--android:textAllCaps="true"-->
+            <!--/>-->
 
 
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
 
-    <!--画廊效果-->
-    <com.lorenwang.customviews.android.FancyCoverFlow.FancyCoverFlow
-        android:id="@+id/facyCoverFlow"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:maxRotation="45"
-        app:unselectedAlpha="0.3"
-        app:unselectedSaturation="0.0"
-        app:unselectedScale="0.4"
-        android:visibility="gone"/>
+    <!--&lt;!&ndash;画廊效果&ndash;&gt;-->
+    <!--<com.lorenwang.customviews.android.FancyCoverFlow.FancyCoverFlow-->
+        <!--android:id="@+id/facyCoverFlow"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--app:maxRotation="45"-->
+        <!--app:unselectedAlpha="0.3"-->
+        <!--app:unselectedSaturation="0.0"-->
+        <!--app:unselectedScale="0.4"-->
+        <!--android:visibility="gone"/>-->
 
 
 </android.support.constraint.ConstraintLayout>
