--- a/AndroidCustomViewsFromLorenWang/src/main/res/values/attr_progress_view.xml
+++ b/AndroidCustomViewsFromLorenWang/src/main/res/values/attr_progress_view.xml
@@ -3,6 +3,7 @@
     <declare-styleable name="CustomProgressTypeView">
         <attr name="showProgressType">
             <enum name="PROGRESS_TYPE_1" value="0"/>
+            <enum name="PROGRESS_TYPE_2" value="1"/>
         </attr>
         <attr name="progressWidth" format="dimension"/>
         <attr name="progressHeight" format="dimension"/>
