--- a/AndroidCustomViewsFromLorenWang/src/main/res/values/attr_title_bar_head_view.xml
+++ b/AndroidCustomViewsFromLorenWang/src/main/res/values/attr_title_bar_head_view.xml
@@ -14,8 +14,21 @@
         <!--背景颜色-->
         <attr name="viewBgColor" format="color"/>
         <!--后退图片样式,宽高使用一致的-->
-        <attr name="backImgWidthHeight" format="dimension"/>
+        <attr name="backImgWidth" format="dimension"/>
+        <attr name="backImgHeight" format="dimension"/>
         <attr name="backImgColor" format="color"/>
+        <!--后退图片-->
+        <attr name="backImgRes" format="reference"/>
+        <!--后退按钮边距-->
+        <attr name="backImgLeft" format="dimension"/>
+        <attr name="backImgTop" format="dimension"/>
+        <attr name="backImgRight" format="dimension"/>
+        <attr name="backImgBottom" format="dimension"/>
+        <!--右侧按钮边距-->
+        <attr name="rightBtnLeft" format="dimension"/>
+        <attr name="rightBtnTop" format="dimension"/>
+        <attr name="rightBtnRight" format="dimension"/>
+        <attr name="rightBtnBottom" format="dimension"/>
         <attr name="layoutType" format="enum">
             <enum name="LAYOUT_TYPE_0" value="0"/>//（0）自定义view
             <enum name="LAYOUT_TYPE_1" value="1"/>//（1）后退、标题
